--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "spatie/laravel-sitemap": "^6.1",
-        "ext-libsodium": "*"
+        "spatie/laravel-sitemap": "^6.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
